--- a/ETL/dockerfile
+++ b/ETL/dockerfile
@@ -11,8 +11,13 @@ USER root
 
 COPY requirements.txt requirements.txt
 
-RUN apt-get update && apt-get install -y gettext
+RUN apt-get update && apt-get install -y gettext && apt-get install -y netcat-traditional
 
 RUN  pip install --upgrade pip && pip install -r requirements.txt --no-cache-dir
 
+COPY ./entrypoint.sh /
+RUN chmod 777 /entrypoint.sh
+
 COPY . /src
+
+ENTRYPOINT ["/entrypoint.sh"]
