debugged and dockerized

--- a/docker-compose-api-with-etl.yml
+++ b/docker-compose-api-with-etl.yml
@@ -2,20 +2,16 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:13
+    build:
+      context: ./postgres
+      dockerfile: dockerfile
     container_name: postgres
-    expose:
-      - 5432
-    volumes:
-      - pg_data:/var/lib/postgresql/data/
-      - ./postgres:/docker-entrypoint-initdb.d
     env_file:
       - .env
     environment:
       - POSTGRES_PASSWORD=${PG_PASSWORD}
       - POSTGRES_USER=${PG_USER}
       - POSTGRES_DB=${PG_NAME}
-    restart: always
 
 
   elasticsearch:
@@ -41,8 +37,6 @@ services:
       - "8888:8888"
     env_file:
       - .env
-    restart: always
-
 
   app:
     build:
@@ -111,6 +105,19 @@ services:
       REDIS_DB: ${REDIS_DB}
       ES_HOST: ${ES_HOST}
       ES_PORT: ${ES_PORT}
+
+
+  async_api:
+    container_name: fastapi
+    build:
+      context: async_api
+      dockerfile: Dockerfile
+    ports:
+      - 7000:7000
+    depends_on:
+      - etl
+      - cache
+
 
 volumes:
   pg_data:
