--- a/docker-compose-final.yml
+++ b/docker-compose-final.yml
@@ -60,7 +60,8 @@ services:
     container_name: nginx
     volumes:
       - ./admin_nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./admin_nginx/site.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./admin_nginx/site.conf:/etc/nginx/conf.d/site.conf:ro
+      - ./admin_nginx/api.conf:/etc/nginx/conf.d/api.conf:ro
       - static_volume:/app/staticfiles
       - media_volume:/app/media
       - ./data:/data/:ro
@@ -69,6 +70,7 @@ services:
     ports:
       - "80:80"
       - "8000:80"
+      - "8080:8080"
 
   cache:
     image: redis:7.2.3-alpine3.18
@@ -125,3 +127,4 @@ volumes:
   static_volume:
   media_volume:
   cache:
+
