--- a/async_api/requirements.txt
+++ b/async_api/requirements.txt
@@ -17,6 +17,7 @@ multidict==6.0.4
 orjson==3.9.10
 pydantic==2.4.2
 pydantic_core==2.10.1
+pydantic_settings==2.1.0
 redis==5.0.1
 sniffio==1.3.0
 starlette==0.27.0
@@ -25,3 +26,4 @@ urllib3==2.0.7
 uvicorn==0.24.0.post1
 uvloop==0.19.0
 yarl==1.9.2
+gunicorn==20.1.0
