--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,7 @@ services:
 
   async_api:
     container_name: fastapi
+    image: fastapi-image
     command: gunicorn main:app --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:7000
     environment:
       PYTHONPATH: /app/src
@@ -122,6 +123,29 @@ services:
     depends_on:
       - etl
       - cache
+  
+  tests:
+    image: fastapi-image
+    depends_on:
+      - elasticsearch
+      - cache
+    env_file:
+      - .env
+    environment:
+      PYTHONPATH: /
+      ES_HOST: ${ES_HOST}
+      ES_INDEX: ${ES_INDEX}
+      ES_ID_FIELD: ${ES_ID_FIELD}
+      ES_PORT: ${ES_PORT}
+      SERVICE_URL: ${SERVICE_URL}
+      REDIS_HOST: ${REDIS_HOST}
+    volumes:
+      - ./async_api/tests:/tests/
+    entrypoint: >
+      sh -c " pip install -r /tests/functional/requirements.txt
+      && python3 /tests/functional/utils/wait_for_es.py
+      && python3 /tests/functional/utils/wait_for_redis.py
+      && pytest /tests/functional/src"
 
 
 volumes:
