--- a/tests/dockerfile
+++ b/tests/dockerfile
@@ -1,12 +1,6 @@
 FROM python:3.10
-
-ENV TZ=Europe/Moscow
-
-WORKDIR /app
-
-COPY requirements.txt .
-
+WORKDIR /tests
+COPY /functional/requirements.txt .
 RUN pip install --upgrade pip --no-cache-dir \
      && pip install -r requirements.txt --no-cache-dir
-
-COPY . /app
+COPY . /tests/
